css/styles.css
/* CSS Reset */

body,
h1, 
h2, 
h3, 
h4,
p,
ul {
	margin: 0;
	padding: 0;
}

/* Global Styles */

*,
*::before,
*::after {
	box-sizing: border-box;
}

:root {
	font-size: 10px;
	--purple: #4c3a68;
}

:focus {
	outline: none;
	box-shadow: 0 0 0 0.25rem var(--purple);
}

::selection {
	background-color: var(--purple);
	color: #fff;
}

body {
	font-family: 'Roboto', Arial, sans-serif;	
	color: #111;
}

p {
	font-size: 2rem;
	line-height: 1.8;
}

a {
	display: inline-block;	
	color: #000;
	-webkit-text-decoration-skip: ink;
	text-decoration-skip: ink;
	transition: color 300ms;
}

a:hover,
a:focus {
	color: var(--purple);
}

.external-icon:before {
	font-size: 0.55em;
	vertical-align: top;
	padding-left: 0.25em;
}

/* Header Styles */

.main-header {
	height: 100vh;	
	color: #fff;
}

.video-bg {
	position: fixed;
    width: 100%;
    height: 100%;
    object-fit: cover;
	z-index: -10;
	background-color: #181818;
}

.video-bg::-webkit-media-controls {
	display: none !important;
}

.video-overlay {
	font-family: Montserrat, Arial, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;  
    position: absolute;
    top: 0;
    height: 100vh;
    width: 100%;
    color: #fff;
    background-color: rgba(0,0,0,0.7);    
	border-top: 0.6em solid var(--purple);
	letter-spacing: 0.1em;
}

.video-overlay h1 {
	font-size: calc(3em + 2.5vw);
	font-weight: 700;
	text-shadow: 0.04em 0.04em 0.015em rgba(0, 0, 0, 0.5);
}

.video-overlay h2 {
	font-size: calc(1.5em + 1.5vw);
	font-weight: 600;
	margin-top: 0.5em;
	text-shadow: 0.06em 0.06em 0.03em rgba(0, 0, 0, 0.5);
}

.skip-link {
	font-size: 1.8rem;
	font-weight: 600;
    position: absolute !important;
	top: 2em;
    height: 1px;
	width: 1px;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
	padding: 0.8em 1em;
	color: #fff;
	z-index: 5;
	text-decoration: none;
}

.skip-link:focus {
	position: static;
    width: auto;
	height: auto;
	clip: auto;
	color: #fff;
}

.learn-more-link {
	position: absolute;
	bottom: 1em;
	font-size: 2.2rem;
	font-weight: 500;
	line-height: 1.6;
	color: rgba(255, 255, 255, 0.4);
	text-decoration: none;
	transition: color 300ms ease;
}

.learn-more-link:hover,
.learn-more-link:focus {
	color: rgba(255, 255, 255, 0.8);
}

.learn-more-link .fa {
	font-size: 1.2em;
}

/* Section Styles */

.section-light {
	background-color: #fcfcfc;
}

.section-dark {
	background-color: #eee;
	border-top: 0.1em solid #ccc;
	border-bottom: 0.1em solid #ccc;	
}

.section-container {
	max-width: 120em;
	padding: 5em 1.5em;
	margin: 0 auto;
}

.section-heading {
	font-size: 3rem;
	margin-bottom: 0.72em;
	text-align: center;
}

.section-sub-heading {
	font-size: 1.8rem;
	margin-bottom: 1.4em;
	text-align: center;
}

.section-sub-heading::after {
	content: ':';
}

/* About Section */

.headshot-container {
	width: 25em;
	margin: 0 auto;
	perspective: 80em;
}

.headshot {
	border-radius: 50%;	
	transition: transform 500ms ease-in-out;
}

.headshot-container:hover .headshot {
	transform: rotateY(360deg);
}

.about-section p {
	margin: 1.5em auto 0;
	max-width: 42em;
}

/* Portfolio Section */

.portfolio-section .section-container {
	text-align: center;	
}

.portfolio-filters {
	display: none;
	margin-bottom: 2em;
}

.portfolio-filters a {
	background: #ccc;
	font-size: 1.8rem;
	color: #000;
	margin-right: -.222em;
	padding: 0.555em;
}

.portfolio-filters a.current, 
.portfolio-filters a:hover {
	/*border-bottom: 2px solid #333;*/
	background: #999;
}

.portfolio-gallery {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-gap: calc(1.5em + 2vw) 1.5em;
}

.portfolio-item {	
	margin: 0 1vw;
	border: 0.1em solid #bbb;
	border-radius: 0.5em;
}

.portfolio-item a {
	display: block;
	text-decoration: none;
}

.portfolio-item-thumbnail {
	position: relative;
	height: 20em;
	overflow: hidden;
	border-bottom: 0.1em solid #bbb;
	border-top-left-radius: 0.5em;
	border-top-right-radius: 0.5em;
}

.portfolio-item-thumbnail iframe {	
	position: absolute;
	top: -18%;
	left: 0;
	width: 201%;
	height: 237%;
	transform: scale(0.5);
	transform-origin: top left;
	pointer-events: none;
}

.portfolio-item-thumbnail .hide-scroll {
	width: 205%;
}

.portfolio-item-thumbnail-overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 20em;
	background-color: rgba(68,68,68,0.95);
	color: #fff;
	padding: 1.5em;
	text-align: left;
	opacity: 0;
	transition: opacity 250ms ease;
}

.portfolio-item-thumbnail-overlay p {
	font-size: 1.5rem;
}

.portfolio-item a:hover .portfolio-item-thumbnail-overlay {
	opacity: 1;
}

.portfolio-item-content {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 1.2em;
	height: 8.4em;
	background-color: #fdfdfd;
	border-bottom-left-radius: 0.5em;
	border-bottom-right-radius: 0.5em;
	overflow: hidden;
}

.portfolio-item-title {
	font-size: 1.6rem;
	line-height: 1.4;
}

/* Contact Section */

.contact-section .section-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	text-align: center;
}

.contact-section .section-heading {
	flex-basis: 100%;
}

/* Map Section */

.map-container {
	flex-basis: 80%;
}

.map {
	display: flex;
	height: 24em;
	border: 0.1em solid #ccc;
	border-radius: 0.5em;
	margin: 0 auto 5em;
}

.map span {
	font-size: 2rem;
	font-weight: 700;
	margin: auto;
}

/* Email Section */

.email-container {
	flex-basis: 50%;
	margin-bottom: 5em;
}

.email-link {
	font-size: 2.5em;
}

/* Social Section */

.social-container {
	flex-basis: 50%;
}

.social-links {
	display: flex;
	justify-content: center;
	list-style: none;
}

.social-links li {
	font-size: 3rem;	
	border-right: 0.035em solid #ccc;
	margin-bottom: 0.35em;
}

.social-links li:last-child {
	border-right: none;
}

.social-links a {
	padding: 0 0.4em;
	transition: color 300ms ease, 
				transform 500ms cubic-bezier(0.13, 0.43, 0.54, 1.82), 
				text-shadow 500ms ease-out;
}

.social-links a:hover {
	text-shadow: 0.032em 0.032em 0.032em rgba(0, 0, 0, 0.5);
	transform: scale(1.1);
}

.facebook:hover,
.facebook:focus {
	color: #3b5998;
}

.twitter:hover,
.twitter:focus {
	color: #55acee;
}

.instagram:hover,
.instagram:focus {
	color: #e95950;
}

.linkedin:hover,
.linkedin:focus {
	color: #007bb5;
}

.github:hover,
.github:focus {
	color: #24292e;
}

.codepen:hover,
.codepen:focus {
	color: #000;
}

/* Footer Styles */

.main-footer {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: #181818;
	height: 14em;
	border-top: 0.5em solid var(--purple);
}

.main-footer a {
	color: #fff;
}

.hosting-info {
	color: #888;
	font-size: 1.6rem;
	margin: 0.6em 0 0;
	text-align: center;
}

.reload-link {
	display: block;
	font-family: Montserrat, Arial, sans-serif;
	font-size: 2.6rem;
	text-shadow: 0.08em 0.08em rgba(0,0,0,.5);
	text-decoration: none;
}

/* Media Queries */

@media (max-width: 58em) {

	.main-header {
		background: url(../img/poster.jpg) no-repeat center;
		background-size: cover;
	}

	.video-bg {
		display: none;
	}

	.portfolio-gallery {
		grid-template-columns: 1fr 1fr;
	}

	.contact-section .section-container {
		flex-direction: column;
	}
}

@media (max-width: 33em) {

	.portfolio-gallery {
		grid-template-columns: 1fr;
	}

	.email-link {
		font-size: 2.2rem;
	}

	.social-container li {
		font-size: 2.4rem;
	}

	.hosting-info {
		font-size: 1.4rem;
	}
}

